--- a/www/style.css
+++ b/www/style.css
@@ -13,6 +13,10 @@ body {
   border-radius: 5px;
   white-space: nowrap;
 }
+.label-inputs {
+  padding: 15px;
+  line-height: 50px;
+}
 .g-sign-in .button:hover {
   cursor: pointer;
 }
@@ -36,7 +40,7 @@ body {
   font-weight: bold;
 }
 .map {
-  width: 95%;
+  width: 100%;
   height: 700px;
   margin-bottom: 10px;
 }
